# strong-types

./: .clang-tidy  .clang-tidy-naming  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  SECURITY.md  cppcheck.suppress  naming_exceptions.txt  package.xml
.github/scripts/: pre-analysis.sh
.github/workflows/: build-test.yml  cpp-quality.yml  docker.yml  fuzz.yml  infra-lint.yml  release.yml  scorecard.yml  version-sync.yml
cmake/: cmake_warnings.cmake  strong-typesConfig.cmake.in
include/strong-types/: aligned_array.hpp  fmt.hpp  quantity_point.hpp  safe_math.hpp  si.hpp  si_chrono.hpp  si_literals.hpp  si_scaled.hpp  si_scaled_literals.hpp  strong.hpp  tag_traits.hpp
test/: edge_cases_test.cpp  fmt_test.cpp  fuzz_quantity_point.cpp  fuzz_safe_math.cpp  quantity_point_test.cpp  safe_math_test.cpp  si_chrono_test.cpp  si_literals_test.cpp  si_scaled_test.cpp  si_test.cpp  strong_aligned_array_test.cpp  strong_types_test.cpp
